# Zero_Action

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  found_logo.txt  pyproject.toml  update.md
.agents/: AGENTS.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml
docs/: index.md  master_prompt.md  panduan_fitur_lengkap.md  prd.md  structure.md  tech.md  web_search_and_reader_guide.md
tests/: conftest.py
tests/cli/: test_architect_command.py  test_ask_stdin.py  test_benchmark_command.py  test_billing_command.py  test_chat_commands.py  test_cli.py  test_code_command.py  test_config_commands.py  test_dashboard_command.py  test_devcontainer_command.py  test_doc_gen_command.py  test_docker_command.py  test_fix_command.py  test_git_mapper.py  test_init_command.py  test_memory_backup.py  test_memory_commands.py  test_mock_command.py  test_plan_command.py  test_pr_command.py  test_pr_prune.py  test_provider_commands.py  test_refactor_command.py  test_release_command.py  test_review_command.py  test_review_vision.py  test_schema_command.py  test_search_commands.py  test_setup.py  test_shortcut_command.py  test_test_command.py  test_test_gen_command.py  test_update_command.py  test_version.py
tests/unit/: test_ai_service.py  test_config.py  test_fallback.py  test_git_autopilot.py  test_logging.py  test_memory_subsystem.py  test_new_providers.py  test_providers.py  test_rag.py  test_repository.py  (+3 more)
zero/: __init__.py  __main__.py  version.py
(+87 files in other folders)
