[project]
name = "zero-action"
version = "1.0.0"
description = "Zero Action: An AI Development Partner CLI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "typer[all]>=0.12.3",
    "rich>=13.7.1",
    "loguru>=0.7.2",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "python-dotenv>=1.0.1",
    "litellm>=1.40.0",
    "gitpython>=3.1.43",
    "pathspec>=0.12.1",
    "prompt-toolkit>=3.0.43",
]

[project.scripts]
zero = "zero.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zero"]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
]
